--- a/config.toml
+++ b/config.toml
@@ -66,7 +66,7 @@ sidebar = "right" # sidebar value (left,right or false)
 # Preloader
 [params.preloader]
 enable = true
-preloader = "jpg" # use jpg, png, svg or gif format.
+preloader = "images/preloader.gif" # use jpg, png, svg or gif format.
 
 # Subscription
 [params.subscription]
