--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -28,8 +28,9 @@ jobs:
     - uses: actions/checkout@v2
       with:
         ref: ${{ github.head_ref }}
-        path: 'https://github.com/drpaneas/astrobot'
+        repository: 'https://github.com/drpaneas/astrobot'
+        path: 'astrobotdir'
         
     # Runs a single command using the runners shell
     - name: Send greeting
-      run: echo "Hello ${{ github.workspace }}"
+      run: ls ${{ github.workspace }}
