--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -28,7 +28,8 @@ jobs:
     - uses: actions/checkout@v2
       with:
         ref: ${{ github.head_ref }}
-        repository: 'https://github.com/drpaneas/astrobot'
+        # For the repository the expected format is: {owner}/{repo}.
+        repository: 'drpaneas/astrobot'
         path: 'astrobotdir'
         
     # Runs a single command using the runners shell
