--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -23,6 +23,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         ref: ${{ github.head_ref }}
+        # the path will be: ${{ github.workspace }}/website
         path: 'website'
         
     - uses: actions/checkout@v2
@@ -30,8 +31,14 @@ jobs:
         ref: ${{ github.head_ref }}
         # For the repository the expected format is: {owner}/{repo}.
         repository: 'drpaneas/astrobot'
+        # the path will be: ${{ github.workspace }}/astrobotdir
         path: 'astrobotdir'
         
     # Runs a single command using the runners shell
-    - name: Send greeting
-      run: ls ${{ github.workspace }}
+    - name: Install hugo
+      run: apt-get install hugo
+      
+    # Install Go devenv
+    - uses: actions/setup-go@v2
+    - name: Setup Go
+      run: go version
