--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -16,6 +16,9 @@ jobs:
   updater:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    env:
+      WEBHOOK_DISCORD: https://discordapp.com/api/webhooks/bleep/blop
+      REPO_PATH: ${{ github.workspace }}/website
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -40,3 +43,10 @@ jobs:
     # Install Go devenv
     - uses: actions/setup-go@v2
     - run: go version
+    
+    # Run it
+    - name: Run astrobot
+    - run: | 
+        cd ${{ github.workspace }}/astrobotdir
+        ./astrobot
+      
