--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -17,7 +17,7 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     env:
-      WEBHOOK_DISCORD: https://discordapp.com/api/webhooks/bleep/blop
+      WEBHOOK_DISCORD: ${{ secrets.WEBHOOK_DISCORD }} # Do not edit, defined in secrets
       REPO_PATH: ${{ github.workspace }}/website
 
     # Steps represent a sequence of tasks that will be executed as part of the job
