--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -67,7 +67,7 @@ jobs:
 
         # Optional local file path to the repository
         # Defaults to the root of the repository
-        repository: $REPO_PATH
+        repository: ${{ github.workspace }}/website
 
         # Optional commit user and author settings
         commit_user_name: My GitHub Actions Bot # defaults to "GitHub Actions"
