--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,10 +1,12 @@
 # This is a basic workflow that is manually triggered
 
-name: Manual workflow
+name: Every Hour
 
 # Controls when the action will run. Workflow runs when manually triggered using the UI
 # or API.
 on:
+  schedule:
+    - cron: '0 * * * *'
   workflow_dispatch:
   push:
     branches:
