--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -6,7 +6,7 @@ name: Every Hour
 # or API.
 on:
   schedule:
-    - cron: '0 * * * *'
+    - cron: '0 */3 * * *'
   workflow_dispatch:
   push:
     branches:
